--- a/ferreteria/src/Clientes/ClientesGUI.form
+++ b/ferreteria/src/Clientes/ClientesGUI.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Clientes.ClientesGUI">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="14" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="15" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="439"/>
+      <xy x="20" y="20" width="500" height="495"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <scrollpane id="dc339">
         <constraints>
-          <grid row="0" column="0" row-span="14" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="15" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -26,7 +26,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="id"/>
+          <text value="ID"/>
         </properties>
       </component>
       <component id="3af60" class="javax.swing.JLabel">
@@ -34,7 +34,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="nombre"/>
+          <text value="Nombre"/>
         </properties>
       </component>
       <component id="2d995" class="javax.swing.JLabel">
@@ -42,7 +42,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="telefono"/>
+          <text value="Teléfono"/>
         </properties>
       </component>
       <component id="229ed" class="javax.swing.JLabel">
@@ -50,7 +50,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="direccion"/>
+          <text value="Dirección"/>
         </properties>
       </component>
       <component id="f26ea" class="javax.swing.JLabel">
@@ -58,7 +58,7 @@
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="correo"/>
+          <text value="Correo"/>
         </properties>
       </component>
       <component id="24ff9" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -101,12 +101,12 @@
         </constraints>
         <properties/>
       </component>
-      <component id="c13c1" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
+      <component id="c13c1" class="javax.swing.JButton" binding="crearButton">
         <constraints>
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="agregar"/>
+          <text value="Crear"/>
         </properties>
       </component>
       <component id="a0e23" class="javax.swing.JButton" binding="eliminarButton" default-binding="true">
@@ -114,7 +114,15 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="eliminar"/>
+          <text value="Eliminar"/>
+        </properties>
+      </component>
+      <component id="9af4a" class="javax.swing.JButton" binding="volverAlMenuButton">
+        <constraints>
+          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Volver al menú"/>
         </properties>
       </component>
       <component id="104d" class="javax.swing.JButton" binding="actualizarButton" default-binding="true">
@@ -122,15 +130,7 @@
           <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="actualizar"/>
-        </properties>
-      </component>
-      <component id="9af4a" class="javax.swing.JButton" binding="volverAlMenuButton">
-        <constraints>
-          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Volver al menú"/>
+          <text value="Actualizar"/>
         </properties>
       </component>
     </children>
