--- a/ferreteria/src/Inventario_productos/Inventario_productosGUI.form
+++ b/ferreteria/src/Inventario_productos/Inventario_productosGUI.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Inventario_productos.Inventario_productosGUI">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="504"/>
+      <xy x="20" y="20" width="500" height="544"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="62d0d" class="javax.swing.JTable" binding="table1" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
@@ -31,14 +31,6 @@
             <properties>
               <text value="id_producto"/>
             </properties>
-          </component>
-          <component id="8f247" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
           <component id="d7768" class="javax.swing.JLabel">
             <constraints>
@@ -123,6 +115,14 @@
               </model>
             </properties>
           </component>
+          <component id="8f247" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <component id="e2e8e" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
@@ -147,6 +147,14 @@
         </constraints>
         <properties>
           <text value="Eliminar"/>
+        </properties>
+      </component>
+      <component id="64f8" class="javax.swing.JButton" binding="volverAlMenuButton">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Volver"/>
         </properties>
       </component>
     </children>
