--- a/ferreteria/src/MenuP/MenuPrincipal.form
+++ b/ferreteria/src/MenuP/MenuPrincipal.form
@@ -6,8 +6,9 @@
       <xy x="20" y="20" width="766" height="402"/>
     </constraints>
     <properties>
-      <background color="-14605013"/>
+      <background color="-16055278"/>
       <enabled value="true"/>
+      <font size="48"/>
     </properties>
     <border type="bevel-raised" title-justification="2">
       <font name="JetBrains Mono" size="12" style="1"/>
@@ -20,7 +21,7 @@
         </constraints>
         <properties>
           <background color="-3678977"/>
-          <font name="JetBrains Mono" size="24" style="1"/>
+          <font name="JetBrains Mono" size="36" style="1"/>
           <foreground color="-458761"/>
           <horizontalTextPosition value="0"/>
           <text value="Menú principal Ferretería"/>
@@ -47,7 +48,7 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-14605009"/>
+          <background color="-524308"/>
           <text value="Clientes"/>
         </properties>
       </component>
@@ -74,12 +75,16 @@
       </hspacer>
       <hspacer id="4e9f7">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="26" height="11"/>
+          </grid>
         </constraints>
       </hspacer>
       <hspacer id="31304">
         <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="28" height="11"/>
+          </grid>
         </constraints>
       </hspacer>
       <hspacer id="afdd8">
