--- a/ferreteria/src/Clientes/ClientesGUI.form
+++ b/ferreteria/src/Clientes/ClientesGUI.form
@@ -5,14 +5,20 @@
     <constraints>
       <xy x="20" y="20" width="500" height="495"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+      <foreground color="-16250614"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="dc339">
         <constraints>
           <grid row="0" column="0" row-span="15" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5130305"/>
+          <foreground color="-11184297"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="443af" class="javax.swing.JTable" binding="table1" default-binding="true">
@@ -106,6 +112,8 @@
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16250614"/>
           <text value="Crear"/>
         </properties>
       </component>
@@ -114,6 +122,8 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16250614"/>
           <text value="Eliminar"/>
         </properties>
       </component>
@@ -122,6 +132,8 @@
           <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
+          <foreground color="-16250614"/>
           <text value="Volver al menú"/>
         </properties>
       </component>
@@ -130,6 +142,8 @@
           <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Actualizar"/>
         </properties>
       </component>
