--- a/ferreteria/src/Empleados/EmpleadosGUI.form
+++ b/ferreteria/src/Empleados/EmpleadosGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="411"/>
     </constraints>
-    <properties/>
+    <properties>
+      <foreground color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="e136" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -23,6 +25,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <model>
             <item value="Gerente"/>
             <item value="Cajero"/>
@@ -36,6 +39,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <text value="Cargo"/>
         </properties>
       </component>
@@ -44,6 +48,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <text value="Salario"/>
         </properties>
       </component>
@@ -60,6 +65,8 @@
           <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Agregar"/>
         </properties>
       </component>
@@ -68,6 +75,8 @@
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16250614"/>
           <text value="Actualizar"/>
         </properties>
       </component>
@@ -76,6 +85,8 @@
           <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Eliminar"/>
         </properties>
       </component>
@@ -84,6 +95,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <text value="Nombre"/>
         </properties>
       </component>
@@ -100,6 +112,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <text value="Id"/>
         </properties>
       </component>
@@ -118,6 +131,8 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
+          <foreground color="-16055278"/>
           <text value="Volver "/>
         </properties>
       </component>
