--- a/ferreteria/src/Inventario_productos/Inventario_productosGUI.form
+++ b/ferreteria/src/Inventario_productos/Inventario_productosGUI.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="544"/>
+      <xy x="20" y="20" width="432" height="543"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="62d0d" class="javax.swing.JTable" binding="table1" default-binding="true">
@@ -14,14 +16,18 @@
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <foreground color="-11184297"/>
+        </properties>
       </component>
       <grid id="e4c49" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5130305"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="a6704" class="javax.swing.JLabel">
@@ -29,6 +35,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="id_producto"/>
             </properties>
           </component>
@@ -37,6 +44,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="categoria_producto"/>
             </properties>
           </component>
@@ -45,6 +53,7 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="nombre_producto"/>
             </properties>
           </component>
@@ -61,6 +70,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="precio_proveedor"/>
             </properties>
           </component>
@@ -77,6 +87,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="precio_venta"/>
             </properties>
           </component>
@@ -93,6 +104,7 @@
               <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-16055278"/>
               <text value="cantidad_stock"/>
             </properties>
           </component>
@@ -130,6 +142,8 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Agregar"/>
         </properties>
       </component>
@@ -138,6 +152,8 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Actualizar"/>
         </properties>
       </component>
@@ -146,6 +162,8 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16055278"/>
           <text value="Eliminar"/>
         </properties>
       </component>
@@ -154,6 +172,8 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
+          <foreground color="-16055278"/>
           <text value="Volver"/>
         </properties>
       </component>
