--- a/ferreteria/src/Ordenes_compra/Ordenes_compraGUI.form
+++ b/ferreteria/src/Ordenes_compra/Ordenes_compraGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <foreground color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="57b05" class="javax.swing.JLabel">
@@ -13,6 +15,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16250614"/>
           <labelFor value="cff7c"/>
           <text value="Total:"/>
         </properties>
@@ -22,6 +25,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <labelFor value="6b275"/>
           <text value="ID del cliente:"/>
         </properties>
@@ -31,6 +35,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16250614"/>
           <labelFor value="7a487"/>
           <text value="ID del producto:"/>
         </properties>
@@ -40,6 +45,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16250614"/>
           <labelFor value="59e1a"/>
           <text value="Fecha de compra:"/>
         </properties>
@@ -49,6 +55,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16250614"/>
           <labelFor value="8b3fa"/>
           <text value="ID orden del empleado:"/>
         </properties>
@@ -76,6 +83,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16250614"/>
           <labelFor value="32c4"/>
           <text value="ID empleado:"/>
         </properties>
@@ -117,6 +125,8 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16250614"/>
           <text value="Agregar Compra"/>
         </properties>
       </component>
@@ -125,6 +135,8 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11184297"/>
+          <foreground color="-16250614"/>
           <text value="Actualizar Compra"/>
         </properties>
       </component>
@@ -133,6 +145,8 @@
           <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
+          <foreground color="-16055278"/>
           <text value="Volver"/>
         </properties>
       </component>
