--- a/ferreteria/src/MenuP/MenuPrincipal.form
+++ b/ferreteria/src/MenuP/MenuPrincipal.form
@@ -1,107 +1,201 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MenuP.MenuPrincipal">
-  <grid id="27dc6" binding="main" layout-manager="GridLayoutManager" row-count="2" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="25" left="25" bottom="0" right="0"/>
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="766" height="402"/>
+      <xy x="20" y="20" width="900" height="700"/>
     </constraints>
     <properties>
-      <background color="-16055278"/>
-      <enabled value="true"/>
-      <font size="48"/>
+      <background color="-14605013"/>
+      <minimumSize width="900" height="700"/>
+      <opaque value="false"/>
+      <preferredSize width="1100" height="750"/>
     </properties>
-    <border type="bevel-raised" title-justification="2">
-      <font name="JetBrains Mono" size="12" style="1"/>
-      <title-color color="-5524801"/>
-    </border>
+    <border type="none"/>
     <children>
-      <component id="be24e" class="javax.swing.JLabel">
+      <grid id="94fca" binding="contentPanel" layout-manager="CardLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-3678977"/>
-          <font name="JetBrains Mono" size="36" style="1"/>
-          <foreground color="-458761"/>
-          <horizontalTextPosition value="0"/>
-          <text value="Menú principal Ferretería"/>
+          <background color="-14605013"/>
+          <opaque value="false"/>
         </properties>
-      </component>
-      <component id="8d1a6" class="javax.swing.JButton" binding="ordenesCompraMenu">
-        <constraints>
-          <grid row="1" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="ordenesCompra"/>
-        </properties>
-      </component>
-      <component id="996ed" class="javax.swing.JButton" binding="inventariosMenu">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Inventarios"/>
-        </properties>
-      </component>
-      <component id="7af14" class="javax.swing.JButton" binding="clientesMenu">
-        <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-524308"/>
-          <text value="Clientes"/>
-        </properties>
-      </component>
-      <component id="32520" class="javax.swing.JButton" binding="empleadosMenu">
-        <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Empleados"/>
-        </properties>
-      </component>
-      <component id="85ddf" class="javax.swing.JButton" binding="proveedoresMenu">
-        <constraints>
-          <grid row="1" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Proveedores"/>
-        </properties>
-      </component>
-      <hspacer id="e06e7">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="4e9f7">
-        <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="26" height="11"/>
+        <border type="none"/>
+        <children>
+          <grid id="d30c5" binding="welcomePanel" layout-manager="GridLayoutManager" row-count="7" column-count="12" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="15">
+            <margin top="40" left="40" bottom="40" right="40"/>
+            <constraints>
+              <card name="welcomeCard"/>
+            </constraints>
+            <properties>
+              <background color="-1841808"/>
+              <opaque value="false"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="4c54f" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="12" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font name="JetBrains Mono" size="28" style="1"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="0"/>
+                  <text value="Ferreteria &quot;Venta de ferreterías&quot;"/>
+                </properties>
+              </component>
+              <component id="e78a5" class="javax.swing.JLabel" binding="lblWelcomeImage">
+                <constraints>
+                  <grid row="1" column="1" row-span="5" col-span="11" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <horizontalAlignment value="0"/>
+                  <horizontalTextPosition value="0"/>
+                  <text value=""/>
+                </properties>
+              </component>
+              <component id="1f5e2" class="javax.swing.JButton" binding="btnReportes">
+                <constraints>
+                  <grid row="2" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Reportes"/>
+                </properties>
+              </component>
+              <component id="4d72a" class="javax.swing.JButton" binding="btnVender">
+                <constraints>
+                  <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Vender"/>
+                </properties>
+              </component>
+              <component id="e33dd" class="javax.swing.JButton" binding="salirButton" default-binding="true">
+                <constraints>
+                  <grid row="6" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-8356225"/>
+                  <font name="JetBrains Mono"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="0"/>
+                  <text value="Salir"/>
+                </properties>
+              </component>
+              <component id="f7b70" class="javax.swing.JButton" binding="chatButton" default-binding="true">
+                <constraints>
+                  <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="0"/>
+                  <text value="Chat"/>
+                </properties>
+              </component>
+              <component id="5e38a" class="javax.swing.JButton" binding="btnProveedores">
+                <constraints>
+                  <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Proveedores"/>
+                </properties>
+              </component>
+              <component id="d2cca" class="javax.swing.JButton" binding="btnOrdenesCompra">
+                <constraints>
+                  <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Órdenes de Compra"/>
+                </properties>
+              </component>
+              <component id="ca903" class="javax.swing.JButton" binding="btnInventario">
+                <constraints>
+                  <grid row="4" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <horizontalTextPosition value="11"/>
+                  <iconTextGap value="10"/>
+                  <margin top="5" left="15" bottom="2" right="5"/>
+                  <text value="Inventario_productos"/>
+                </properties>
+              </component>
+              <component id="b6dea" class="javax.swing.JButton" binding="btnEmpleados">
+                <constraints>
+                  <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Empleados"/>
+                </properties>
+              </component>
+              <component id="4a1d5" class="javax.swing.JButton" binding="btnClientes">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-1841808"/>
+                  <borderPainted value="false"/>
+                  <focusPainted value="false"/>
+                  <font name="JetBrains Mono" size="14"/>
+                  <foreground color="-458761"/>
+                  <horizontalAlignment value="2"/>
+                  <iconTextGap value="10"/>
+                  <margin top="2" left="15" bottom="2" right="2"/>
+                  <text value="Clientes"/>
+                </properties>
+              </component>
+            </children>
           </grid>
-        </constraints>
-      </hspacer>
-      <hspacer id="31304">
-        <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="28" height="11"/>
-          </grid>
-        </constraints>
-      </hspacer>
-      <hspacer id="afdd8">
-        <constraints>
-          <grid row="1" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="ced04">
-        <constraints>
-          <grid row="1" column="10" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <hspacer id="f66d3">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
